@@ -11,8 +11,9 @@
  * Helper function for parse_cpubind_args below. Processes all the options
  */
 
-static int
-parse_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags);
+static int parse_set_options  (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags);
+static int parse_get_options  (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags);
+static int parse_last_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags);
 
 /*
  * topology cpubind ?-pid pid? ?-type flags_list? ...
@@ -35,13 +36,13 @@ int parse_cpubind_args (topo_data* data, Tcl_Interp *interp, int objc, Tcl_Obj *
         return TCL_ERROR;
     }
 
-    at = parse_options (interp, objc, objv, &pid, &flags);
-    if (at < 0) {
-	return TCL_ERROR;
-    }
-
     switch (index) {
     case CPUBIND_SET:
+	at = parse_set_options (interp, objc, objv, &pid, &flags);
+	if (at < 0) {
+	    return TCL_ERROR;
+	}
+
 	if (at != (objc-1)) {
 	    Tcl_WrongNumArgs(interp, 3, objv, "?options? cpuset");
 	    return TCL_ERROR;
@@ -63,7 +64,12 @@ int parse_cpubind_args (topo_data* data, Tcl_Interp *interp, int objc, Tcl_Obj *
 	break;
 
     case CPUBIND_GET:
-    case CPUBIND_LAST:
+
+	at = parse_get_options (interp, objc, objv, &pid, &flags);
+	if (at < 0) {
+	    return TCL_ERROR;
+	}
+
 	if (at != objc) {
 	    Tcl_WrongNumArgs(interp, 3, objv, "?options?");
 	    return TCL_ERROR;
@@ -76,21 +82,41 @@ int parse_cpubind_args (topo_data* data, Tcl_Interp *interp, int objc, Tcl_Obj *
 
 	thecpuset = hwloc_bitmap_alloc();
 
-	switch (index) {
-	case CPUBIND_GET:
-	    if (pid) {
-		res = hwloc_get_proc_cpubind(data->topology, pid, thecpuset, flags);
-	    } else {
-		res = hwloc_get_cpubind(data->topology, thecpuset, flags);
-	    }
-	    break;
-	case CPUBIND_LAST:
-	    if (pid) {
-		res = hwloc_get_proc_last_cpu_location(data->topology, pid, thecpuset, flags);
-	    } else {
-		res = hwloc_get_last_cpu_location(data->topology, thecpuset, flags);
-	    }
-	    break;
+	if (pid) {
+	    res = hwloc_get_proc_cpubind(data->topology, pid, thecpuset, flags);
+	} else {
+	    res = hwloc_get_cpubind(data->topology, thecpuset, flags);
+	}
+
+	if (res == -1) {
+	    hwloc_bitmap_free(thecpuset);
+	    goto bind_error;
+	}
+
+	return thwl_set_result_bitmap (interp, thecpuset);
+
+    case CPUBIND_LAST:
+	at = parse_last_options (interp, objc, objv, &pid, &flags);
+	if (at < 0) {
+	    return TCL_ERROR;
+	}
+
+	if (at != objc) {
+	    Tcl_WrongNumArgs(interp, 3, objv, "?options?");
+	    return TCL_ERROR;
+	}
+
+	if (pid && (flags & HWLOC_CPUBIND_THREAD)) {
+	    Tcl_SetResult (interp, "Illegal use of -thread together with -pid", TCL_STATIC);
+	    return TCL_ERROR;
+	}
+
+	thecpuset = hwloc_bitmap_alloc();
+
+	if (pid) {
+	    res = hwloc_get_proc_last_cpu_location(data->topology, pid, thecpuset, flags);
+	} else {
+	    res = hwloc_get_last_cpu_location(data->topology, thecpuset, flags);
 	}
 
 	if (res == -1) {
@@ -117,23 +143,127 @@ int parse_cpubind_args (topo_data* data, Tcl_Interp *interp, int objc, Tcl_Obj *
 }
 
 /*
- * Helper function for parse_cpubind_args below. Processes all the options
+ * Helper functions for parse_cpubind_args below. Processes all the options
  */
 
 static int
-parse_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags)
+parse_set_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags)
 {
     static const char* options[] = {
         "-nomembind", "-pid",    "-process",
 	"-strict",    "-thread", NULL
     };
     enum options {
-        CPUBIND_NOMEMBIND, CPUBIND_PID, CPUBIND_PROCESS,
-	CPUBIND_STRICT,    CPUBIND_THREAD
+        CPUBIND_SET_NOMEMBIND, CPUBIND_SET_PID, CPUBIND_SET_PROCESS,
+	CPUBIND_SET_STRICT,    CPUBIND_SET_THREAD
     };
     static int map [] = {
 	HWLOC_CPUBIND_NOMEMBIND, 0, HWLOC_CPUBIND_PROCESS,
 	HWLOC_CPUBIND_STRICT,    HWLOC_CPUBIND_THREAD
+    };
+
+    int index, at;
+
+    *pid   = 0;
+    *flags = 0;
+
+    /* topo/0 cpubind/1 method/2 ... => at = 3 */
+    for (at = 3; at < objc; at++) {
+        if (Tcl_GetIndexFromObj(interp, objv[at], options, "flag", 0, &index) != TCL_OK) {
+	    if(Tcl_GetString (objv[at])[0] == '-') {
+		return -1;
+	    }
+	    return at;
+	}
+
+	if (index != CPUBIND_SET_PID) {
+	    *flags |= map [index];
+	    continue;
+	}
+
+	/*
+	 * -pid has an argument. Check for and process it.
+	 */
+
+	at ++;
+	if (at >= objc) {
+	    Tcl_SetResult (interp, "Missing argument for -pid.", TCL_STATIC);
+	    return -1;
+	}
+
+        if (Tcl_GetIntFromObj(interp, objv[at], pid) == TCL_ERROR) {
+            return -1;
+	}
+    }
+
+    return at;
+}
+
+static int
+parse_get_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags)
+{
+    static const char* options[] = {
+	"-pid",    "-process",
+	"-strict", "-thread", NULL
+    };
+    enum options {
+        CPUBIND_PID,    CPUBIND_PROCESS,
+	CPUBIND_STRICT, CPUBIND_THREAD
+    };
+    static int map [] = {
+	0,                    HWLOC_CPUBIND_PROCESS,
+	HWLOC_CPUBIND_STRICT, HWLOC_CPUBIND_THREAD
+    };
+
+    int index, at;
+
+    *pid   = 0;
+    *flags = 0;
+
+    /* topo/0 cpubind/1 method/2 ... => at = 3 */
+    for (at = 3; at < objc; at++) {
+        if (Tcl_GetIndexFromObj(interp, objv[at], options, "flag", 0, &index) != TCL_OK) {
+	    if(Tcl_GetString (objv[at])[0] == '-') {
+		return -1;
+	    }
+	    return at;
+	}
+
+	if (index != CPUBIND_PID) {
+	    *flags |= map [index];
+	    continue;
+	}
+
+	/*
+	 * -pid has an argument. Check for and process it.
+	 */
+
+	at ++;
+	if (at >= objc) {
+	    Tcl_SetResult (interp, "Missing argument for -pid.", TCL_STATIC);
+	    return -1;
+	}
+
+        if (Tcl_GetIntFromObj(interp, objv[at], pid) == TCL_ERROR) {
+            return -1;
+	}
+    }
+
+    return at;
+}
+
+
+static int
+parse_last_options (Tcl_Interp* interp, int objc, Tcl_Obj* CONST objv[], int* pid, int* flags)
+{
+    static const char* options[] = {
+        "-pid", "-process", "-thread", NULL
+    };
+    enum options {
+        CPUBIND_PID, CPUBIND_PROCESS, CPUBIND_THREAD
+    };
+    static int map [] = {
+	0, HWLOC_CPUBIND_PROCESS, HWLOC_CPUBIND_THREAD
     };
 
     int index, at;
